Remove schedule
