# swaggerdocs/swagger.yaml
@@ -283,84 +283,6 @@ definitions:
     - latitude
     - longitude
     type: object
-  domain.CreateScheduleDTO:
-    properties:
-      acceptance_status:
-        allOf:
-        - $ref: '#/definitions/db.ScheduleAcceptanceStatus'
-        enum:
-        - PENDING
-        - ACCEPTED
-        - REJECTED
-      diagnostic_centre_id:
-        type: string
-      doctor:
-        allOf:
-        - $ref: '#/definitions/db.Doctor'
-        enum:
-        - Male
-        - Female
-      notes:
-        type: string
-      schedule_time:
-        type: string
-      test_type:
-        enum:
-        - BLOOD_TEST
-        - URINE_TEST
-        - X_RAY
-        - MRI
-        - CT_SCAN
-        - ULTRASOUND
-        - ECG
-        - COVID_TEST
-        - DNA_TEST
-        - ALLERGY_TEST
-        - GENETIC_TEST
-        - OTHER
-        - EEG
-        - BIOPSY
-        - SKIN_TEST
-        - IMMUNOLOGY_TEST
-        - HORMONE_TEST
-        - VIRAL_TEST
-        - BACTERIAL_TEST
-        - PARASITIC_TEST
-        - FUNGAL_TEST
-        - MOLECULAR_TEST
-        - TOXICOLOGY_TEST
-        - ECHO
-        - COVID_19_TEST
-        - BLOOD_SUGAR_TEST
-        - LIPID_PROFILE
-        - HEMOGLOBIN_TEST
-        - THYROID_TEST
-        - LIVER_FUNCTION_TEST
-        - KIDNEY_FUNCTION_TEST
-        - URIC_ACID_TEST
-        - VITAMIN_D_TEST
-        - VITAMIN_B12_TEST
-        - HEMOGRAM
-        - COMPLETE_BLOOD_COUNT
-        - BLOOD_GROUPING
-        - HEPATITIS_B_TEST
-        - HEPATITIS_C_TEST
-        - HIV_TEST
-        - MALARIA_TEST
-        - DENGUE_TEST
-        - TYPHOID_TEST
-        - COVID_19_ANTIBODY_TEST
-        - COVID_19_RAPID_ANTIGEN_TEST
-        - COVID_19_RT_PCR_TEST
-        - PREGNANCY_TEST
-        type: string
-      user_id:
-        type: string
-    required:
-    - doctor
-    - schedule_time
-    - test_type
-    type: object
   domain.DeactivateAccountDTO:
     properties:
       password:
@@ -2845,47 +2767,6 @@ paths:
       security:
       - BearerAuth: []
       summary: List user's diagnostic schedules
-      tags:
-      - Schedule
-    post:
-      consumes:
-      - application/json
-      description: Schedule a diagnostic test at a diagnostic centre. Requires user
-        authentication.
-      parameters:
-      - description: Bearer token
-        in: header
-        name: Authorization
-        required: true
-        type: string
-      - description: Schedule details
-        in: body
-        name: schedule
-        required: true
-        schema:
-          $ref: '#/definitions/domain.CreateScheduleDTO'
-      produces:
-      - application/json
-      responses:
-        "201":
-          description: SUCCESS_RESPONSE
-          schema:
-            $ref: '#/definitions/handlers.ScheduleSwagger'
-        "400":
-          description: BAD_REQUEST
-          schema:
-            $ref: '#/definitions/handlers.BAD_REQUEST'
-        "401":
-          description: UNAUTHORIZED_ERROR
-          schema:
-            $ref: '#/definitions/handlers.UNAUTHORIZED_ERROR'
-        "500":
-          description: INTERNAL_SERVER_ERROR
-          schema:
-            $ref: '#/definitions/handlers.INTERNAL_SERVER_ERROR'
-      security:
-      - BearerAuth: []
-      summary: Create a new diagnostic schedule
       tags:
       - Schedule
   /v1/diagnostic_schedules/{schedule_id}:
